Fix hideOnWindowDeactivate in Dialog and AppletPopup

Commit 65b00fa6b7c9f2942979f3fcafe5f03d3f4ebbbd brought QuickViewSharedEngine to libplasma from KDeclarative,
but also changed the logic of hiding of Dialog on focus change from checking for QuickViewSharedEngine to SharedQmlEngine, which is likely a typo.
QWindow can never be cast to SharedQmlEngine (I think?) so this qobject_cast always returns nullptr.

BUG: 511187
(cherry picked from commit fcaa31ee87b2a9a23dd9303e2d3162801e489d5f)