src/plasmaquick/dialog.cpp
@@ -15,7 +15,7 @@
 #include "debug_p.h"
 #include "dialogbackground_p.h"
 #include "dialogshadows_p.h"
-#include "sharedqmlengine.h"
+#include "quickviewsharedengine.h"
 
 #include <QLayout>
 #include <QMenu>
@@ -1338,7 +1338,7 @@ void Dialog::focusOutEvent(QFocusEvent *ev)
         const QWindow *focusWindow = QGuiApplication::focusWindow();
         bool childHasFocus = focusWindow && ((focusWindow->isActive() && isAncestorOf(focusWindow)) || (focusWindow->type() & Qt::Popup) == Qt::Popup);
 
-        const bool viewClicked = qobject_cast<const PlasmaQuick::SharedQmlEngine *>(focusWindow) || qobject_cast<const ConfigView *>(focusWindow);
+        const bool viewClicked = qobject_cast<const PlasmaQuick::QuickViewSharedEngine *>(focusWindow) || qobject_cast<const ConfigView *>(focusWindow);
 
         if (viewClicked || (!parentHasFocus && !childHasFocus)) {
             setVisible(false);
